--- a/template.html
+++ b/template.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css"> <title>Título do Artigo — Pitore</title>
+</head>
+<body class="article-page">
 
+    <nav class="article-nav">
+        <a href="../diario.html">← Voltar ao Arquivo</a>
+    </nav>
+
+    <article class="content-wrapper">
+        <header class="article-header">
+            <span class="article-tag tag-piteni">PiTeni</span> <h1 class="article-main-title">Escreva seu título aqui</h1>
+            <time class="article-time">20 DE FEVEREIRO, 2026</time>
+        </header>
+
+        <section class="article-body">
+            <p>Seu texto começa aqui...</p>
+        </section>
+    </article>
+
+    <footer>
+        <p>Pitore © 2026</p>
+    </footer>
+
+</body>
+</html>
